--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,16 @@
+0.6.0
+-----
+* CHANGE: callback registering is now the same for playlists, playlist containers, the spotify object and the player and does
+  not use strings as keys anymore. Some old callback-setter-methods were removed.
+* FEATURE: Wrapped Spotify user objects and added them to appropiate places.
+* CHANGE: starred playlist is now accessible from the user and not the playlist container anymore.
+* CHANGE: removed static callbacks.
+* FIX: Playlists are not always added to the root playlist container.
+* FEATURE: Tracks acquired from a playlist have now additional fields.
+* FEATURE: Object constructors are now accessible to change prototypes.
+* FEATURE: Single playlists in a playlist container and single tracks in a playlist can now be accessed.
+* FEATURE: Added additional playlist callbacks for single track changes.
+
 0.5.4
 -----
 * FEATURE: Added collaborative flag to playlists.
