--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+0.7.1
+-----
+* FEATURE: Track availability (thanks drsounds!)
+* Now compatible with node.js 0.10 and 0.12.
+
 0.7.0
 -----
 * FEATURE: audio handler to receive the audio in JavaScript
